--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div id="main">
                     <div class="row">
                         <button id="clear" class="column">C</button>
-                        <button class="column">/</button>
-                        <button class="column">*</button>
+                        <button id ="divide" class="column">/</button>
+                        <button id ="multiply" class="column">*</button>
                     </div>
                     <div class="row">
                         <button class="column number">7</button>
@@ -45,7 +45,8 @@
             </div>
             <div id="right">
                 <button id="negative">+/-</button>
-                <button id="plus">+</button>
+                <button id="add">+</button>
+                <button id="subtract">-</button>
                 <button id="equals">=</button>
             </div>
         </div>
